--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
 			<div class="container">
 				<div class="company-name">
 					<a href="{{ site.baseurl }}/">
-						<span class="dark-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/dark.svg" alt="dark frisco logo"></span>
-						<span class="light-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/light.svg" alt="light frisco logo"></span>
+						<span class="dark-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/dark.png" alt="dark frisco logo"></span>
+						<span class="light-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/light.png" alt="light frisco logo"></span>
 				</div>
 				{% include navigation.html %}
 				<p class="editor-link"><a style="display:inline;" href="cloudcannon:collections/_data/navigation.yml" class="btn"><strong>&#9998;</strong> Edit navigation</a></p>
