--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,8 @@ layout: page
 
 <section>
 	<div class="blog-post text-container">
-		<p class="editor-link"><a href="cloudcannon:collections/{{ page.path }}" class="btn"><strong>&#9998;</strong> Edit Post</a></p>
+		<p class="editor-link"><a href="{{ page.github_link }}" class="btn"><strong>&#9998;</strong> Edit on GitHub</a></p>
+
 		{% include post-title.html post=page %}
 
 		<div class="post-content">
